# rv

./: README.md  init.sh  pyproject.toml  rv  rv.py
completions/: rv.bash  rv.fish  rv.zsh
templates/: README.md.tmpl  Rprofile  gitignore
templates/R/: init.R  utils.R
templates/ci/: r-check.yml.tmpl
templates/config/: analysis.yaml.slurm.tmpl  analysis.yaml.tmpl
templates/docker/: Apptainer.def.tmpl  Dockerfile.tmpl
templates/scripts/: run_analysis.R  setup_env.R  setup_env_renv.snippet  slurm_analysis.R
templates/slurm/: run_job.sh.tmpl
tests/: conftest.py  test_rv.py
